@@ -373,6 +373,7 @@ $LANG = array (
 		'L_CONFIG_ADVANCED_GZIP' => 'Activer la compression GZIP',
 		'L_CONFIG_ADVANCED_GZIP_HELP' => 'Permet de compresser les pages pour économiser de la bande passante, cependant cela peut augmenter la charge processeur',
 		'L_CONFIG_ADVANCED_CAPCHA' => 'Activer le capcha anti-spam',
+		'L_CONFIG_ADVANCED_LOSTPASSWORD' => 'Włącz odzyskiwanie hasła',
 		'L_CONFIG_ADVANCED_ADMIN_KEY' => 'Clef d\'administration (URLs privés)',
 		'L_CONFIG_ADVANCED_KEY_HELP' => 'Vider ce champs pour régénérer la clef',
 		'L_CONFIG_ADVANCED_USERFOLDERS' => 'Utiliser un dossier medias différent pour chaque rédacteur',
